# site-DCAF

./: 404.html  README.md  content.json  index.html  mkdocs.yml  pyproject.toml  server.py  sitemap.xml
contato/: index.html
docs/: contato.md  contuteis.md  extra.css  index.md  links.md  manual.md  sobre.md
docs/css/: chatbot.css
docs/js/: chatbot.js
javascripts/: chatbot.js
links/: index.html
manual/: index.html
search/: search_index.json
site/: 404.html  content.json  index.html  sitemap.xml
site/contuteis/: index.html
site/javascripts/: extra.js
site/links/: index.html
site/manual/: index.html
site/search/: search_index.json
site/sobre/: index.html
sobre/: index.html
